--- a/resources/public/styles/curiouser.css
+++ b/resources/public/styles/curiouser.css
@@ -50,8 +50,9 @@ button {
 #instructions {
     float: left;
     padding: 18px;
-    height: 100%;
+    height: 85%;
     width: 45%;
+    overflow: auto;
 }
 
 #editor {
@@ -97,4 +98,11 @@ td {
 
 .answer {
     font-size: 18px;
+}
+
+.decimal {
+    text-align: "." start;
+}
+.integer {
+    text-align: right;
 }
