Taking care of errors from the SQL engine.

--- a/resources/public/styles/curiouser.css
+++ b/resources/public/styles/curiouser.css
@@ -106,3 +106,10 @@ td {
 .integer {
     text-align: right;
 }
+
+.error {
+    white-space: pre-wrap;
+    font-family: monospace;
+    color: #c00;
+    margin-top: 12px;
+}
